<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:src="@drawable/picturebox"
            android:scaleType="centerInside" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:orientation="vertical" >
            
            <TextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="會員編號:rm_a01125888987"
                android:gravity="center|left" />
            
            <TextView
                android:id="@+id/level_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="會員等級"
                android:textSize="20sp"
                android:gravity="center|left" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="horizontal" >
                
                <ImageView
                    android:id="@+id/medal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.6"
                    android:src="@drawable/gold_1"
                    android:scaleType="centerInside" />
                
                <TextView 
                    android:id="@+id/medal_level_describe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.4"
                    android:text="白金一级"
                    android:textSize="20sp"
                    android:gravity="center"/>
                
            </LinearLayout>
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="6dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:background="@drawable/button_black_out" >
            
            <TextView
                android:id="@+id/sent_count_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/activity_profile_situations_sent_count"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="center|left" />
            
            <TextView 
                android:id="@+id/sent_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toLeftOf="@+id/left_image"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_data_bar_mid" />
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/sent_count"
                android:layout_alignBottom="@+id/sent_count"
                android:layout_toLeftOf="@+id/sent_count"
                android:src="@drawable/ic_data_bar_left"
                android:scaleType="centerInside" />
            
            <ImageView 
                android:id="@+id/left_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/sent_count"
                android:layout_alignBottom="@+id/sent_count"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_data_bar_right"
                android:scaleType="centerInside" />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="6dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:background="@drawable/button_black_out" >
            
            <TextView
                android:id="@+id/confirm_count_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/activity_profile_confirm_count"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="center|left" />
            
            <TextView 
                android:id="@+id/confirm_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toLeftOf="@+id/left_image"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_data_bar_mid" />
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/confirm_count"
                android:layout_alignBottom="@+id/confirm_count"
                android:layout_toLeftOf="@+id/confirm_count"
                android:src="@drawable/ic_data_bar_left"
                android:scaleType="centerInside" />
            
            <ImageView 
                android:id="@+id/left_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/confirm_count"
                android:layout_alignBottom="@+id/confirm_count"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_data_bar_right"
                android:scaleType="centerInside" />
            
        </RelativeLayout>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dip"
            android:layout_marginLeft="6dip"
            android:layout_marginRight="6dip"
            android:layout_marginTop="6dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:background="@drawable/button_black_out">
            
            <TextView
                android:id="@+id/dispel_count_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/activity_profile_relieve_count"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:gravity="center|left" />
            
            <TextView 
                android:id="@+id/dispel_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_toLeftOf="@+id/left_image"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_data_bar_mid" />
            
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/dispel_count"
                android:layout_alignBottom="@+id/dispel_count"
                android:layout_toLeftOf="@+id/dispel_count"
                android:src="@drawable/ic_data_bar_left"
                android:scaleType="centerInside" />
            
            <ImageView 
                android:id="@+id/left_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/dispel_count"
                android:layout_alignBottom="@+id/dispel_count"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_data_bar_right"
                android:scaleType="centerInside" />
            
        </RelativeLayout>
        
    </LinearLayout>

</LinearLayout>
